--- a/image-gen/src/app/components/InputTextArea.module.css
+++ b/image-gen/src/app/components/InputTextArea.module.css
@@ -2,18 +2,27 @@
     min-width: 10vw;
     min-height: 80px;
     max-height: 145px;
-    width: 80%;
+    width: 713px;
     border: none;
     border-radius: 13px;
     font-size: 30.13px;
     padding: 13px;
     resize: none;
+    background-color: white;
+    color: black;
+    font-family: monospace;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.inputBox:focus { 
-    /*outline: thin dotted;*/
-    outline: none;
+.inputBox:focus {
+    outline: 2px solid black;
+    outline-offset: 1.3px;
+}
+
+.inputBox:hover {
+    outline: 2px solid black;
+    outline-offset: 1.3px;
+    animation: outlinePop 0.13s ease-in forwards;
 }
 
 .inputBoxCenter {
@@ -26,7 +35,7 @@
 }
 
 .inputButton {
-    height: 99.13px;
+    height: 84.13px;
     width: 135.13px;
     font-size: 80px;
     color: white;
@@ -34,9 +43,29 @@
     border: none;
     border-radius: 12px;
     background-color: rgb(22, 22, 22);
+    background-color: rgb(113, 153, 166);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .inputButton:hover {
     font-size: 83px;
     outline: .3px grey solid;
+}
+
+/* Mobile */
+@media (max-width: 700px) {
+    .inputBoxCenter {
+        width: 96dvw;
+    }
+}
+
+/* anims list */
+@keyframes outlinePop {
+    0% {
+        outline: 2px solid grey;
+        outline-offset: 1.3px;
+    }
+    100% {
+        outline: 2px solid black;
+        outline-offset: 1.3px;
+    }
 }
