--- a/image-gen/src/app/globals.css
+++ b/image-gen/src/app/globals.css
@@ -93,6 +93,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-image: url("./images/bg3.avif");
+  background-blend-mode: lighten;
 }
 
 a {
